# facia

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/schema/: detection_result.rs  images.rs  mod.rs
src/tasks/: collect_files.rs  detect.rs  mod.rs
